--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
   @apply text-dark;
+  font-family: Inter, sans-serif;
 }
